versioned_docs/version-2.18/reference/targets/thrift_source.mdx
---
title: thrift_source
description: |
  A single Thrift file used to generate various languages.
---

import Field from "@site/src/components/reference/Field";
import styles from "@site/src/components/reference/styles.module.css";

---

A single Thrift file used to generate various languages.

See language-specific docs:
Python: https://www.pantsbuild.org/v2.18/docs/thrift-python

Backend: <span className="color--primary">`pants.backend.codegen.thrift.apache.python`</span>

---

<span className={styles.options}>

## `tags`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Arbitrary strings to describe a target.

For example, you may tag some test targets with &#x27;integration_test&#x27; so that you could run `pants --tag='integration_test' test ::` to only run on targets with that tag.

</Field>

## `description`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

A human-readable description of the target.

Use `pants list --documented ::` to see all targets with descriptions.

</Field>

## `dependencies`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Addresses to other targets that this target depends on, e.g. `['helloworld/subdir:lib', 'helloworld/main.py:lib', '3rdparty:reqs#django']`.

This augments any dependencies inferred by Pants, such as by analyzing your imports. Use `pants dependencies` or `pants peek` on this target to get the final result.

See https://www.pantsbuild.org/v2.18/docs/targets for more about how addresses are formed, including for generated targets. You can also run `pants list ::` to find all addresses in your project, or `pants list dir` to find all addresses defined in that directory.

If the target is in the same BUILD file, you can leave off the BUILD file path, e.g. `:tgt` instead of `helloworld/subdir:tgt`. For generated first-party addresses, use `./` for the file path, e.g. `./main.py:tgt`; for all other generated targets, use `:tgt#generated_name`.

You may exclude dependencies by prefixing with `!`, e.g. `['!helloworld/subdir:lib', '!./sibling.txt']`. Ignores are intended for false positives with dependency inference; otherwise, simply leave off the dependency from the BUILD file.

</Field>

## `source`

<Field
    type_repr={`str`}
    default_repr={`None`}
>

A single file that belongs to this target.

Path is relative to the BUILD file&#x27;s directory, e.g. `source='example.ext'`.

</Field>

## `finagle`

<Field
    type_repr={`bool`}
    default_repr={`False`}
    backend="pants.backend.experimental.codegen.thrift.scrooge.java"
>

If True, then also generate Finagle classes for services when using Scrooge as the Thrift generator.

</Field>

## `jvm_resolve`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
    backend="pants.backend.experimental.codegen.thrift.apache.java"
>

The resolve from `[jvm].resolves` to use when compiling this target.

If not defined, will default to `[jvm].default_resolve`.

</Field>

## `python_resolve`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
    backend="pants.backend.codegen.thrift.apache.python"
>

The resolve from `[python].resolves` to use.

If not defined, will default to `[python].default_resolve`.

All dependencies must share the same value for their `resolve` field.

</Field>

## `jvm_jdk`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
    backend="pants.backend.experimental.codegen.thrift.apache.java"
>

The major version of the JDK that this target should be built with. If not defined, will default to `[jvm].default_source_jdk`.

</Field>

</span>
